# frameflow

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md
cmake/: FrameflowCesium.cmake  FrameflowCompilerWarnings.cmake
examples/cesium_dependency_smoke/: main.cpp
examples/cesium_globe_smoke/: main.cpp
examples/linux_surface_smoke/: main.cpp
examples/smoke/: main.cpp
include/frameflow/: engine.hpp  types.hpp  version.hpp
include/frameflow/c/: bridge.h
src/bridge/: bridge_engine.hpp  bridge_events.cpp  bridge_events.hpp  bridge_model.cpp  bridge_model.hpp  c_api.cpp  software_globe_renderer.cpp  software_globe_renderer.hpp
src/core/: engine.cpp  native_surface_runtime.cpp  native_surface_runtime.hpp
src/renderer/cartography/: cartography_dataset.cpp  cartography_dataset.hpp
src/renderer/cesium/: cesium_dependency_smoke.cpp  cesium_dependency_smoke.hpp  glx_native_scene_surface_host.cpp  glx_native_scene_surface_host.hpp  glx_offscreen_scene_host.cpp  glx_offscreen_scene_host.hpp  rendered_globe_scene.cpp  rendered_globe_scene.hpp
tests/: bridge_tests.cpp  cesium_scene_tests.cpp  core_tests.cpp
tests/host_kotlin/: build.gradle  settings.gradle
tests/host_kotlin/src/main/kotlin/frameflow/host/: FrameflowHostBootstrap.kt  FrameflowHostPrototype.kt  FrameflowHostStateStore.kt  FrameflowHostSurfaceController.kt  FrameflowHostWorkbenchApp.kt  FrameflowHostWorkbenchController.kt  FrameflowJnaBindings.kt
tests/host_kotlin/src/test/kotlin/frameflow/host/: FrameflowHostBootstrapTest.kt  FrameflowHostCallbackHandoffTest.kt  FrameflowHostPrototypeIntegrationTest.kt  FrameflowHostStateStoreTest.kt  FrameflowHostSurfaceControllerTest.kt  FrameflowHostWorkbenchControllerTest.kt
